--- a/style.css
+++ b/style.css
@@ -65,7 +65,82 @@ body {
     padding-right: 25px;
     padding-top: 20px;
     padding-bottom: 25px;
-    color: aliceblue;
+    color: rgb(17,17,17);
+  }
 
- 
+  #lower-buttons {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    user-select: none;
+    transition: transform 0.3s, opacity 0.3s;
+  }
+
+  #img-card:hover #lower-buttons {
+    transform: translateY(200%);
+    opacity: 0;
+  }
+
+  #lower-buttons #check {
+    font-size: 1em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    width: 200px;
+    height: 30px;
+    background-color: rgb(234,234,234);
+    border-radius: 20%;
+    cursor: pointer;
+    transition: transform 0.5s;
+    text-align: center;
+    font-weight: bold;
+    color: rgb(17,17,17);
+  }
+
+
+  #lower-buttons #share {
+    /* margin-top: 10px; */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* padding-left: 10%; */
+    /* padding-right: 90%; */
+    /* padding-top: 90%; */
+    /* padding-bottom: 10%; */
+    display: inline-block;
+    width: 80px;
+    height: 50px;
+    background-color: rgb(234,234,234);
+    /* top: 20px; */
+    /* right: 5px; */
+    border-radius: 20%;
+    cursor: pointer;
+    transition: transform 0.5s;
+  }
+
+  #lower-buttons #more {
+    /* margin-top: 10px; */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* padding-left: 10%; */
+    /* padding-right: 90%; */
+    /* padding-top: 90%; */
+    /* padding-bottom: 10%; */
+    display: inline-block;
+    width: 80px;
+    height: 50px;
+    background-color: rgb(234,234,234);
+    /* top: 20px; */
+    /* right: 5px; */
+    border-radius: 20%;
+    cursor: pointer;
+    transition: transform 0.5s;
   }
